--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,7 @@ p {
   top: 0;
 }
 .bg-struct.bg-img {
-  background: url(../img/img-bg-1.jpg);
+  background: url(../img/0*MPoz9YzJq7jMdbfh.webp);
   background-position: center;
   background-size: cover;
 }
